--- a/AnimeKeyBackend/AnimeKeyBackend/appsettings.json
+++ b/AnimeKeyBackend/AnimeKeyBackend/appsettings.json
@@ -7,7 +7,8 @@
     "refreshExpiration": 1
   },
   "ConnectionStrings": {
-    "ConnectionString": "Server=.;Database=Anime_Dev;Integrated Security=true;"
+   // "ConnectionString": "Server=.;Database=Anime_Dev;Integrated Security=true;",
+    "ConnectionString": "Server=DESKTOP-I85QLOM\\MSSQLSERVER2021;Database=Anime_Dev;Integrated Security=true;"
   },
   "Logging": {
     "LogLevel": {
